--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
     <a href="" class="navbar-brand">Angular Projects</a>
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
-        <a href="" class="nav-link">Articles</a>
+        <a routerLink="/articles" routerLinkActive="active" class="nav-link">Articles</a>
       </li>
       <li class="nav-item">
         <a routerLink="/contact" routerLinkActive="active" class="nav-link">
